feat : Member-ChatRoom 연관관계 매핑, 채팅방 생성시 멤버목록 전달하도록 수정