@@ -1,7 +1,10 @@
 package Dompoo.Hongpoong.service;
 
 import Dompoo.Hongpoong.domain.ChatRoom;
+import Dompoo.Hongpoong.domain.Member;
+import Dompoo.Hongpoong.exception.MemberNotFound;
 import Dompoo.Hongpoong.repository.ChatRoomRepository;
+import Dompoo.Hongpoong.repository.MemberRepository;
 import Dompoo.Hongpoong.request.chat.ChatRoomCreateRequest;
 import Dompoo.Hongpoong.response.ChatRoomResponse;
 import lombok.Data;
@@ -9,26 +12,35 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @Data
 public class ChatService {
 
-    private final ChatRoomRepository repository;
+    private final ChatRoomRepository chatRoomRepository;
+    private final MemberRepository memberRepository;
 
-    public ChatRoom createRoom(ChatRoomCreateRequest request){
+    public ChatRoomResponse createRoom(ChatRoomCreateRequest request){
+        List<Member> members = request.getMembers().stream()
+                .map(id -> memberRepository.findById(id)
+                        .orElseThrow(MemberNotFound::new))
+                .toList();
+
         ChatRoom chatRoom = ChatRoom.builder()
                 .name(request.getName())
+                .members(members)
                 .build();
-        return repository.save(chatRoom);
+
+        ChatRoom savedRoom = chatRoomRepository.save(chatRoom);
+
+        return new ChatRoomResponse(savedRoom);
     }
 
     public List<ChatRoomResponse> findAll(){
-        return repository.findAll().stream()
+        return chatRoomRepository.findAll().stream()
                 .map(ChatRoomResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 //    public ChatRoomDetailResponse findOne(Long roomId){
